drkns 26.10.2018 23:27:41 +0100 - build 5298

1. И ещё раз.

drkns 26.10.2018 23:09:45 +0100 - build 5297

1. Уточнение 5281.2.

drkns 26.10.2018 19:48:27 +0100 - build 5296

1. С форума: Visual issue with moving items between groups in Files highlighting

drkns 26.10.2018 18:59:10 +0100 - build 5295

1. После 5080 некореектно работали FSF.FarClock / Far.UpTime

2. Улучшения диалога выбора цвета.

drkns 26.10.2018 01:20:13 +0100 - build 5294

1. С форума: Add color code (#RRGGBB) to the Color dialog

drkns 25.10.2018 20:33:20 +0100 - build 5293

1. Уточнение 5291.

drkns 24.10.2018 22:20:59 +0100 - build 5292

1. В комстроке и ассоциациях криво работал парсер "if [not] exist" - первый попавшийся "not" распространялся на все вложенные "if", например "if not exist foo if defined tmp echo yes".
   Подозреваю, правильно он не работал никогда.

2. Пара мелочей.

drkns 24.10.2018 00:09:27 +0100 - build 5291

1. Рефакторинг.

drkns 22.10.2018 22:26:20 +0100 - build 5290

1. Уточнение 5288.1.

drkns 21.10.2018 15:23:33 +0100 - build 5289

1. Уточнение 5288.1.

drkns 20.10.2018 23:14:28 +0100 - build 5288

1. И снова здравствуй, радуга: продолжение build 2070 семь лет спустя:
   - В Interface settings добавлена опция "Use Virtual Terminal for rendering".
   - В диалог выбора цвета добавлена кнопка "Advanced".
   - Исправлены баги с комбинированием цветов.
   Иными словами - счастливые обладатели Windows 10 теперь могут наслаждаться труколором без посредников и не отходя от кассы.

2. Workaround для https://github.com/Microsoft/console/issues/281.

drkns 14.10.2018 13:21:57 +0100 - build 5287

1. Убраны добавленные в 2145 опции "Highlight column separators" и "Double stripe separators".
   Разделители всегда используют цвет Panel.Box и удваиваются между полосами.

drkns 14.10.2018 02:29:18 +0100 - build 5286

1. Опции "-a Disable display of characters with codes 0 - 31 and 255" больше нет.