@@ -3,6 +3,10 @@ This file is a translation of the main russian changelog and is provided by volu
 It might not always be as up to date as the main changelog.
 =======================================================================================
 
+drkns 27.10.2018 17:44:42 +0100 - build 5299
+
+1. Forum: Crash when renaming 1.1.1 to *.*.2
+
 drkns 26.10.2018 23:27:41 +0100 - build 5298
 
 1. And once more.
