@@ -1,3 +1,7 @@
+drkns 27.10.2018 17:44:42 +0100 - build 5299
+
+1. С форума: При попытке переименовать файл или каталог с именем 1.1.1 в *.*.2 FAR падает.
+
 drkns 26.10.2018 23:27:41 +0100 - build 5298
 
 1. И ещё раз.
